--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 *{
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
+  font-family: serif;
 }
 
 .container{
@@ -15,6 +16,7 @@
 }
 
 .score-container{
+  padding: 10px;
   border: 1px solid black;
   width: 50%;
   height: 5vh;
@@ -22,6 +24,8 @@
   display: flex;
   align-items:center;
   justify-content: space-around;
+  font-weight: 900;
+  font-size: 2rem
 }
 
 .score{
@@ -54,9 +58,15 @@
 }
 
 .display img{
-  width:100%;
+  width:50%;
   height: auto;
+  display:none;
 }
+
+.display .active{
+  display: block;
+}
+
 
 .input{
   border: 1px solid black;
@@ -80,7 +90,7 @@
 }
 
 .input-button img{
- width: 100%;
+ width: 50%;
  height: auto;
 }
 
