--- a/style.css
+++ b/style.css
@@ -79,7 +79,8 @@
   padding: 10px;
 }
 
-.input-button{
+.input-button,
+#reset-btn{
   border: 1px solid black;
   width:100%;
   height: 100%;
@@ -94,16 +95,34 @@
  height: auto;
 }
 
-.input-button button{
+button{
   width: inherit;
   height: inherit;
   background-color: transparent;
   border: none;
 }
 
-.input-button button:hover{
+button:hover{
   width: inherit;
   height: inherit;
   background-color: lightblue;
   border: none;
 }
+
+.reset{
+  border: 1px solid black;
+  margin-top: 2rem;
+  width: 50%;
+  height: 10vh;
+  display: flex;
+  align-items:center;
+  justify-content: space-evenly;
+  padding: 10px;
+}
+
+.reset img{
+  width: 10%;
+  height: auto;
+}
+
+
